--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,8 @@
     "from sklearn.model_selection import RandomizedSearchCV, StratifiedShuffleSplit\n",
     "\n",
     "# Подбор K с помощью RandomizedSearchCV\n",
-    "random_search = RandomizedSearchCV(KNeighborsClassifier(), grid_params, cv=StratifiedShuffleSplit(n_splits=10), scoring='accuracy',n_iter=len(n_range))\n",
+    "random_search = RandomizedSearchCV(KNeighborsClassifier(), grid_params, cv=StratifiedShuffleSplit(n_splits=10),\n",
+    "                                    scoring='accuracy',n_iter=len(n_range))\n",
     "random_search.fit(X_train, y_train)\n",
     "\n",
     "# Лучшая модель RandomisedSearch\n",
